adding lazy loading

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 	<div id="inicio" class="video-background">
 		<div class="video-wrap">
 			<div id="videobg">
-				<video id="bg" autoplay loop muted playsinline>
+				<video loading="lazy" id="bg" autoplay loop muted playsinline>
 					<source src="media/video/videobg.mp4" alt="Video de videojuegos">
 				</video>
 			</div>
@@ -132,7 +132,7 @@
 
 			</div>
 			<div class="banner col-md-5">
-				<img src="media/img/bannerpc.jpg" alt="PC Gaming" class="imgbanner img-fluid">
+				<img src="media/img/bannerpc.jpg" loading="lazy" alt="PC Gaming" class="imgbanner img-fluid">
 				<a class="btn btn-outline-light btn-lg" href="market_pcgaming.html" target="_blank">Ir a la tienda</a>
 			</div>
 		</div>
@@ -149,7 +149,7 @@
 					que vayas preparando tu setup. </p>
 			</div>
 			<div class="banner col-md-5 order-md-1">
-				<img src="media/img/bannerconsolas.jpg" alt="consolas" class="imgbanner img-fluid">
+				<img src="media/img/bannerconsolas.jpg" loading="lazy" alt="consolas" class="imgbanner img-fluid">
 				<a class="btn btn-outline-light btn-lg" href="market_consoles.html" target="_blank">Ir a la tienda</a>
 			</div>
 		</div>
@@ -165,7 +165,7 @@
 					usam los profesionales de primer nivel </p>
 			</div>
 			<div class="banner col-md-5">
-				<img src="media/img/banneraccesories.jpeg" alt="accesorios" class="imgbanner img-fluid">
+				<img src="media/img/banneraccesories.jpeg" loading="lazy" alt="accesorios" class="imgbanner img-fluid">
 				<a class="btn btn-outline-light btn-lg" href="market_accesories.html target="_blank">Ir a la tienda</a>
 			</div>
 		</div>
