--- a/market_accesories.html
+++ b/market_accesories.html
@@ -79,7 +79,7 @@
 	<div id="inicio" class="video-background">
 		<div class="video-wrap">
 			<div id="videobg">
-				<video id="bg" autoplay loop muted playsinline>
+				<video loading="lazy" id="bg" autoplay loop muted playsinline>
 					<source src="media/video/videobgaccessories.mp4" alt="Video de videojuegos">
 				</video>
 			</div>
@@ -115,7 +115,7 @@
 							<div class="card shadow">
 								<div class="inner">
 									<a href="https://www.youtube.com/watch?v=r7o9aTTIXhU" target="_bank">
-										<img class="card-img-top" src="media/img/teclados/duckyone.png"
+										<img class="card-img-top" loading="lazy" src="media/img/teclados/duckyone.png"
 											alt="Duck yOne 2 Pure White">
 									</a>
 
@@ -150,7 +150,7 @@
 							<div class="card shadow">
 								<div class="inner">
 									<a href="https://www.youtube.com/watch?v=9G_Ec1Y_M8A" target="_blank">
-										<img class="card-img-top" src="media/img/teclados/duckymecha2.png"
+										<img class="card-img-top" loading="lazy" src="media/img/teclados/duckymecha2.png"
 											alt="Ducky Mecha 2">
 									</a>
 								</div>
@@ -164,7 +164,9 @@
 										</div>
 									</div>
 									<p class="card-text">RGB LED 60% Double Shot PBT Mechanical Keyboard</p>
-									<form action="" method="post">
+									<form action="crud/control.php" method="post">
+										<input hidden name="name" type="text" value="DuckyMecha">
+										<input hidden name="price" type="number" value="99">
 										<div class="input-group mb-3">
 											<div class="input-group-prepend">
 												<label class="input-group-text"
@@ -184,7 +186,7 @@
 							<div class="card shadow">
 								<div class="inner">
 									<a href="https://www.youtube.com/watch?v=pYU6gdIrUBc" target="_blank">
-										<img class="card-img-top" src="media/img/teclados/leopold.png"
+										<img class="card-img-top" loading="lazy" src="media/img/teclados/leopold.png"
 											alt="leopold FC980M">
 									</a>
 								</div>
@@ -220,7 +222,7 @@
 							<div class="card shadow">
 								<div class="inner">
 									<a href="https://www.youtube.com/watch?v=VwW0B1rd9xk" target="_blank">
-										<img class="card-img-top" src="media/img/teclados/frozenllama.jpg	"
+										<img class="card-img-top" loading="lazy" src="media/img/teclados/frozenllama.jpg	"
 											alt="Frozen Llama">
 									</a>
 
@@ -255,7 +257,7 @@
 							<div class="card shadow">
 								<div class="inner">
 									<a href="https://www.youtube.com/watch?v=yn0coIQa5_Y" target="_blank">
-										<img class="card-img-top" src="media/img/teclados/vortex.jpg"
+										<img class="card-img-top" loading="lazy" src="media/img/teclados/vortex.jpg"
 											alt="vortex race 3">
 									</a>
 								</div>
@@ -290,7 +292,7 @@
 							<div class="card shadow">
 								<div class="inner">
 									<a href="https://www.youtube.com/watch?v=9tGRHYr_Q3o" target="_blank">
-										<img class="card-img-top" src="media/img/teclados/kbparadise.jpg"
+										<img class="card-img-top" loading="lazy"  src="media/img/teclados/kbparadise.jpg"
 											alt="KBParadise V60">
 									</a>
 
@@ -331,7 +333,7 @@
 							<div class="card shadow">
 								<div class="inner">
 									<a href="https://www.youtube.com/watch?v=8dmCa5KvjOw" target="_bank">
-										<img class="card-img-top" src="media/img/mouses/g203.png" alt="Logitecg G203">
+										<img class="card-img-top" loading="lazy" src="media/img/mouses/g203.png" alt="Logitecg G203">
 									</a>
 
 								</div>
@@ -365,7 +367,7 @@
 							<div class="card shadow">
 								<div class="inner">
 									<a href="https://www.youtube.com/watch?v=l5YPwXuIxi4&t" target="_bank">
-										<img class="card-img-top" src="media/img/mouses/g403.png" alt="Logitecg G403">
+										<img class="card-img-top" loading="lazy" src="media/img/mouses/g403.png" alt="Logitecg G403">
 									</a>
 
 								</div>
@@ -399,7 +401,7 @@
 							<div class="card shadow">
 								<div class="inner">
 									<a href="https://www.youtube.com/watch?v=JHqYAC4X4cA" target="_bank">
-										<img class="card-img-top" src="media/img/mouses/g502.png" alt="Logitecg G502">
+										<img class="card-img-top" loading="lazy" src="media/img/mouses/g502.png" alt="Logitecg G502">
 									</a>
 
 								</div>
@@ -435,7 +437,7 @@
 							<div class="card shadow">
 								<div class="inner">
 									<a href="https://www.youtube.com/watch?v=L-tDU524z1o" target="_bank">
-										<img class="card-img-top" src="media/img/mouses/g604.png" alt="G604">
+										<img class="card-img-top" loading="lazy" src="media/img/mouses/g604.png" alt="G604">
 									</a>
 								</div>
 								<div class="card-body">
@@ -468,7 +470,7 @@
 							<div class="card shadow">
 								<div class="inner">
 									<a href="https://www.youtube.com/watch?v=InX6le8s0kI" target="_bank">
-										<img class="card-img-top" src="media/img/mouses/g703.png" alt="G703">
+										<img class="card-img-top" loading="lazy" src="media/img/mouses/g703.png" alt="G703">
 									</a>
 
 								</div>
@@ -502,7 +504,7 @@
 							<div class="card shadow">
 								<div class="inner">
 									<a href="" target="_bank">
-										<img class="card-img-top" src="media/img/mouses/g903.png" alt="G903">
+										<img class="card-img-top" loading="lazy" src="media/img/mouses/g903.png" alt="G903">
 									</a>
 
 								</div>
@@ -540,7 +542,7 @@
 							<div class="card shadow">
 								<div class="inner">
 									<a href="" target="_bank">
-										<img class="card-img-top" src="media/img/audifonos/b3500.jpg"
+										<img class="card-img-top" loading="lazy" src="media/img/audifonos/b3500.jpg"
 											alt="Red Lemon B3500">
 									</a>
 
@@ -576,7 +578,7 @@
 							<div class="card shadow">
 								<div class="inner">
 									<a href="" target="_bank">
-										<img class="card-img-top" src="media/img/audifonos/g6000.jpg"
+										<img class="card-img-top" loading="lazy" src="media/img/audifonos/g6000.jpg"
 											alt="Red Lemon G6000">
 									</a>
 
@@ -612,7 +614,7 @@
 							<div class="card shadow">
 								<div class="inner">
 									<a href="" target="_bank">
-										<img class="card-img-top" src="media/img/audifonos/g9000.jpg"
+										<img class="card-img-top" loading="lazy" src="media/img/audifonos/g9000.jpg"
 											alt="Red Lemon G9000">
 									</a>
 
@@ -650,7 +652,7 @@
 							<div class="card shadow">
 								<div class="inner">
 									<a href="" target="_bank">
-										<img class="card-img-top" src="media/img/audifonos/overear.jpg"
+										<img class="card-img-top" loading="lazy" src="media/img/audifonos/overear.jpg"
 											alt="Red Lemon Over Ear">
 									</a>
 
@@ -686,7 +688,7 @@
 							<div class="card shadow">
 								<div class="inner">
 									<a href="" target="_bank">
-										<img class="card-img-top" src="media/img/audifonos/redlemonblue.jpg"
+										<img class="card-img-top" loading="lazy" src="media/img/audifonos/redlemonblue.jpg"
 											alt="Red Lemon bluetooth">
 									</a>
 
@@ -722,7 +724,7 @@
 							<div class="card shadow">
 								<div class="inner">
 									<a href="" target="_bank">
-										<img class="card-img-top" src="media/img/audifonos/w1000.jpg"
+										<img class="card-img-top" loading="lazy" src="media/img/audifonos/w1000.jpg"
 											alt="Red Lemon W1000">
 									</a>
 
