--- a/market_pcgaming.html
+++ b/market_pcgaming.html
@@ -80,7 +80,7 @@
 		<div class="video-wrap">
 			<div id="videobg">
 				<video id="bg" autoplay loop muted playsinline>
-					<source src="media/video/videobgpcgaming.mp4" alt="Video de videojuegos">
+					<source src="media/video/videobgpcgaming.mp4" loading="lazy" alt="Video de videojuegos">
 				</video>
 			</div>
 		</div>
@@ -113,7 +113,7 @@
 				<div class="card shadow">
 					<div class="inner">
 						<a href="https://spartangeek.com/pc/delios-60i" target="_bank">
-							<img class="card-img-top" src="media/img/pc/delios60i.png" alt="PC Delios 60i">
+							<img class="card-img-top" src="media/img/pc/delios60i.png" loading="lazy" alt="PC Delios 60i">
 						</a>
 					</div>
 					<div class="card-body">
@@ -158,7 +158,7 @@
 				<div class="card shadow">
 					<div class="inner">
 						<a href="https://spartangeek.com/pc/delios-70i" target="_bank">
-							<img class="card-img-top" src="media/img/pc/delios70i.png" alt="PC Delios 70i">
+							<img class="card-img-top" src="media/img/pc/delios70i.png" loading="lazy" alt="PC Delios 70i">
 						</a>
 					</div>
 					<div class="card-body">
@@ -201,7 +201,7 @@
 				<div class="card shadow">
 					<div class="inner">
 						<a href="https://spartangeek.com/pc/thanos-2080i" target="_bank">
-							<img class="card-img-top" src="media/img/pc/thanos.png" alt="Pc gamer Thanos">
+							<img class="card-img-top" src="media/img/pc/thanos.png" loading="lazy" alt="Pc gamer Thanos">
 						</a>
 					</div>
 					<div class="card-body">
