--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 		<div class="row featurette">
 			<div class="col-md-7">
 				<h2 class="featurette-heading"> Contamos con las mejores <a href="market_pcgaming.html"
-						target="_blank">PC Gaming</a> del mercado actual a los mejores precios </p>
+						>PC Gaming</a> del mercado actual a los mejores precios </p>
 				</h2>
 				<p class="lead">Nuestras PC Gamer de catálogo son ensambles que hemos diseñado para cubrir diferentes
 					necesidades y presupuestos. Puedes elegir de entre nuestra variedad de computadoras con una
@@ -133,14 +133,14 @@
 			</div>
 			<div class="banner col-md-5">
 				<img src="media/img/bannerpc.jpg" loading="lazy" alt="PC Gaming" class="imgbanner img-fluid">
-				<a class="btn btn-outline-light btn-lg" href="market_pcgaming.html" target="_blank">Ir a la tienda</a>
+				<a class="btn btn-outline-light btn-lg" href="market_pcgaming.html">Ir a la tienda</a>
 			</div>
 		</div>
 		<hr class="featurette-divider">
 		<div class="row featurette">
 			<div class="col-md-7 order-md-2">
 				<h2 class="featurette-heading">Conoce la nueva generación de <a href="market_consoles.html"
-						target="_blank">consolas de videojuegos</a> </h2>
+						>consolas de videojuegos</a> </h2>
 				<p class="lead">¡Es el mejor momento para ser gamer!, no sólo porque la tecnología nos permite vivir
 					cada uno de nuestros juegos favoritos de manera más inmersiva, también porque tenemos la oportunidad
 					de revivir clásicos de la infancia de una forma que, en ese entonces, ¡resultaba inimaginable!
@@ -150,7 +150,7 @@
 			</div>
 			<div class="banner col-md-5 order-md-1">
 				<img src="media/img/bannerconsolas.jpg" loading="lazy" alt="consolas" class="imgbanner img-fluid">
-				<a class="btn btn-outline-light btn-lg" href="market_consoles.html" target="_blank">Ir a la tienda</a>
+				<a class="btn btn-outline-light btn-lg" href="market_consoles.html" >Ir a la tienda</a>
 			</div>
 		</div>
 
@@ -166,7 +166,7 @@
 			</div>
 			<div class="banner col-md-5">
 				<img src="media/img/banneraccesories.jpeg" loading="lazy" alt="accesorios" class="imgbanner img-fluid">
-				<a class="btn btn-outline-light btn-lg" href="market_accesories.html target="_blank">Ir a la tienda</a>
+				<a class="btn btn-outline-light btn-lg" href="market_accesories.html">Ir a la tienda</a>
 			</div>
 		</div>
 	</section>
