--- a/market_consoles.html
+++ b/market_consoles.html
@@ -111,7 +111,7 @@
 			<div class="banner col-md-5">
 				<div class="card shadow">
 					<div class="inner">
-						<a href="https://www.youtube.com/watch?v=0tUqIHwHDEc" target="_bank">
+						<a href="https://www.youtube.com/watch?v=0tUqIHwHDEc" target="_blank">
 							<img class="card-img-top" src="media/img/consolas/xbox.jpeg"  loading="lazy" alt="Xbox Series X">
 						</a>
 					</div>
@@ -126,7 +126,7 @@
 								</div>
 								<input class="input-group-addon" type="number" value="1" min="0" max="30">
 								<div class="input-group-append">
-									<button class="btn btn-outline-danger" type="submit">Añadir al
+									<button class="btn btn-outline-danger" name="agregar"  type="submit">Añadir al
 										carrito</button>
 								</div>
 							</div>
@@ -148,7 +148,7 @@
 			<div class="banner col-md-5 order-md-1">
 				<div class="card shadow">
 					<div class="inner">
-						<a href="https://www.youtube.com/watch?v=RkC0l4iekYo" target="_bank">
+						<a href="https://www.youtube.com/watch?v=RkC0l4iekYo" target="_blank">
 							<img class="card-img-top" src="media/img/consolas/ps5.jpg" loading="lazy" alt="Play Station 5">
 						</a>
 					</div>
@@ -163,7 +163,7 @@
 								</div>
 								<input class="input-group-addon" type="number" value="1" min="0" max="30">
 								<div class="input-group-append">
-									<button class="btn btn-outline-danger" type="submit">Añadir al
+									<button class="btn btn-outline-danger" name="agregar" type="submit">Añadir al
 										carrito</button>
 								</div>
 							</div>
@@ -185,7 +185,7 @@
 			<div class="banner col-md-5">
 				<div class="card shadow">
 					<div class="inner">
-						<a href="https://www.youtube.com/watch?v=f5uik5fgIaI" target="_bank">
+						<a href="https://www.youtube.com/watch?v=f5uik5fgIaI" target="_blank">
 							<img class="card-img-top" src="media/img/consolas/nswitch.jpg" loading="lazy" alt="Nintendo Switch">
 						</a>
 					</div>
@@ -200,7 +200,7 @@
 								</div>
 								<input class="input-group-addon" type="number" value="1" min="0" max="30">
 								<div class="input-group-append">
-									<button class="btn btn-outline-danger" type="submit">Añadir al
+									<button class="btn btn-outline-danger" name="agregar" type="submit">Añadir al
 										carrito</button>
 								</div>
 							</div>
