--- a/market_pcgaming.html
+++ b/market_pcgaming.html
@@ -112,13 +112,13 @@
 			<div class="banner col-md-5">
 				<div class="card shadow">
 					<div class="inner">
-						<a href="https://spartangeek.com/pc/delios-60i" target="_bank">
+						<a href="https://spartangeek.com/pc/delios-60i" target="_blank">
 							<img class="card-img-top" src="media/img/pc/delios60i.png" loading="lazy" alt="PC Delios 60i">
 						</a>
 					</div>
 					<div class="card-body">
 						<h1 class="card-title">$1,500</h1>
-						<form action="crud/control.php" method="post" target="_blank">
+						<form action="crud/control.php" method="post">
 							<div class="input-group">
 								<div class="input-group-prepend">
 									<label class="input-group-text" for="inputGroupSelect01">Cantidad</label>
@@ -157,7 +157,7 @@
 			<div class="banner col-md-5 order-md-1">
 				<div class="card shadow">
 					<div class="inner">
-						<a href="https://spartangeek.com/pc/delios-70i" target="_bank">
+						<a href="https://spartangeek.com/pc/delios-70i" target="_blank">
 							<img class="card-img-top" src="media/img/pc/delios70i.png" loading="lazy" alt="PC Delios 70i">
 						</a>
 					</div>
@@ -200,7 +200,7 @@
 			<div class="banner col-md-5">
 				<div class="card shadow">
 					<div class="inner">
-						<a href="https://spartangeek.com/pc/thanos-2080i" target="_bank">
+						<a href="https://spartangeek.com/pc/thanos-2080i" target="_blank">
 							<img class="card-img-top" src="media/img/pc/thanos.png" loading="lazy" alt="Pc gamer Thanos">
 						</a>
 					</div>
