--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 
 	<!--Fonts-->
-	<link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans" rel="stylesheet">
 
 	<title> Gamer Zone | Home </title>
 
