--- a/thank-you.html
+++ b/thank-you.html
@@ -8,7 +8,12 @@
     <link rel="icon" type="image/vnd.microsoft.icon" href="media/img/favicon.png">
     <!--styles-->
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
-    <link rel="stylesheet" type="text/css" href="css/thankyou.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/fixed.css">
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 
     <!--Fonts-->
@@ -17,19 +22,62 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="box">
-            <div class="box-header">
-                Datos enviados satisfactoriamente
-            </div>
-            <div class="box-content">
-                Gracias por su compra!
-            </div>
-            <div class="box-img">
-                <img src="media/checked.svg">
-            </div>
-            <a class="btn" href="index.html">volver</a>
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <a class="navbar-brand mx-auto" href="index.html">GameZone</a>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="index.html#inicio">Inicio</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="index.html#about">Nosotros</a>
+                </li>
+
+                <li class="nav-item dropdown active">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true">Productos</a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="market_pcgaming.html">PC Gaming</a>
+                        <a class="dropdown-item" href="market_consoles.html">Consolas</a>
+                        <a class="dropdown-item" href="market_accesories.html">Accesorios</a>
+                    </div>
+                </li>
+
+            </ul>
         </div>
+        <a class="carrito" href="order.php" target="_blank">
+            <svg width="4em" height="2em" viewBox="0 0 16 16" class="bi bi-bag" fill="white"
+                xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd"
+                    d="M8 1a2.5 2.5 0 0 0-2.5 2.5V4h5v-.5A2.5 2.5 0 0 0 8 1zm3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4h-3.5zM2 5v9a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1V5H2z" />
+            </svg>
+        </a>
+    </nav>
+
+    <div id="inicio" class="video-background">
+        <div class="video-wrap">
+            <div id="videobg">
+                <video loading="lazy" id="bg" autoplay loop muted playsinline>
+                    <source src="media/video/.mp4" alt="Video de videojuegos">
+                </video>
+            </div>
+        </div>
+    </div>
+
+    <div class="caption text-center bg-transparent">
+        <h1>Gracias por tu compra!</h1>
+        <h3>Hemos recibido tus datos y estamos preparando tu envio!
+        </h3>
+        <h3>Disfruta tus productos</h3>
+        <br>
+        <a class="btn btn-outline-light btn-lg" href="index.html">Volver</a>
     </div>
 
 </body>
